# slimtest

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  pr-title.yml  release-testpypi.yml  release.yml
examples/sample_dbt_project/: README.md  dbt_project.yml  profiles.yml
examples/sample_dbt_project/models/marts/: order_statuses.sql  order_statuses.yml
examples/sample_dbt_project/seeds/: customers.csv  order_events.csv  orders.csv  products.csv
examples/sample_dbt_project/tests/lighttest_factories/: customers.yml  order_events.yml  orders.yml
examples/sample_dbt_project/tests/slimtest_factories/: products.yml
src/lighttest/: __init__.py  cli.py  compile.py  config.py  dbt_project.py  dbt_runner.py  expand.py  factory.py  manifest.py  model_parser.py  result_parser.py  runner.py  schema.py  selector.py
src/slimtest/: __init__.py  cli.py  compile.py  config.py  dbt_project.py  dbt_runner.py  deep_merge.py  expand.py  factory.py  manifest.py  model_parser.py  parametrize.py  result_parser.py  runner.py  scenario.py  schema.py  selector.py
tests/: conftest.py  test_cli.py  test_compile.py  test_config.py  test_dbt_project.py  test_dbt_runner.py  test_deep_merge.py  test_expand.py  test_factory.py  test_manifest.py  test_model_parser.py  test_parametrize.py  test_result_parser.py  test_runner.py  test_scenario.py  test_schema.py  test_selector.py
