[project]
name = "slimtest"
version = "0.1.0"
description = "Factory + trait DSL on top of dbt unit tests."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hisaaki Kato" }]
maintainers = [{ name = "Hisaaki Kato" }]
keywords = ["dbt", "unit-test", "factory", "yaml", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Testing :: Unit",
]
dependencies = [
    "pydantic>=2.6,<3",
    "ruamel.yaml>=0.18,<1",
    "typer>=0.12,<1",
]

[project.urls]
Homepage   = "https://github.com/Hisaaki-Kato/slimtest"
Repository = "https://github.com/Hisaaki-Kato/slimtest"
Issues     = "https://github.com/Hisaaki-Kato/slimtest/issues"
Changelog  = "https://github.com/Hisaaki-Kato/slimtest/blob/main/CHANGELOG.md"

[project.scripts]
slimtest = "slimtest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slimtest"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

# ---------- ruff (lint + format) ----------
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "E501", # line too long -- enforced as lint error, not just formatter advisory
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "PT",  # flake8-pytest-style
    "ANN", # flake8-annotations (force typing)
    "TID", # tidy imports
]
ignore = [
    "ANN401", # Allow Any in function signatures (needed for row dicts).
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "PT004"] # tests don't need strict annotations

[tool.ruff.format]
quote-style = "double"

# ---------- mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_unimported = false # ruamel.yaml has weak stubs
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["ruamel.*"]
ignore_missing_imports = true

# Tests use pytest fixture-based dependency injection; full strict
# annotation discipline adds noise, not safety. We still type-check
# their bodies (`check_untyped_defs = true`).
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_any_generics = false
check_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = ["error"]
